This will give the introduction section its styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ html{
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    z-index: 1;
 }
 #logo{
     height: 100px;
@@ -48,7 +49,24 @@ html{
 .introduction-container{
     position: absolute;
     text-align: center;
-    top: 150px;
+    top: 200px;
+    z-index: -1;
+}
+#greetings h1{
+    font-size: 3.2rem;
+    font-weight: 700;
+    color: black;
+}
+#greetings h2{
+    font-size: 2.2rem;
+    font-weight: 500;
+    color: black;
+}
+#greetings h1,#greetings h2{
+    text-transform: capitalize;
+}
+#greetings h2 span{
+    color: crimson;
 }
 /* --------------End Introduction section styles--------------------- */
 
