This will make the contact form more appealing

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,5 +181,6 @@ html{
     text-transform: capitalize;
     font-size: 1.4rem;
     font-weight: 500;
+    color: black;
 }
 /* -------------------End Contact Styles Section---------------------- */
